# MemApi3

./: AccessorForeign.java  README.md  pom.xml
jni/: CMakeLists.txt  com_ydo4ki_memapi3_AccessorJniDirect.h  library.c
src/main/java/com/ydo4ki/memapi3/: AccessorForeign.java  AccessorJniDirect.java  AccessorUnsafe.java  Mem.java  MemAccessor.java  MemAllocator.java  MemAllocatorCloseable.java  MemAllocatorManual.java  MemAllocatorManualCloseable.java  RWXAllocationNotSupoortedException.java  RWXAllocationNotSupportedException.java  Unchecked.java
src/test/java/: Main.java
src/test/java/com/ydo4ki/memapi3/: Main.java
